--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: https://quartaeccedente.github.io
+baseurl: 
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Corale Quarta Eccedente
+email: info@quartaeccedente.it
+description: "Benvenuti nel sito ufficiale della Corale Quarta Eccedente di Vaiano. Scopri qui il nostro repertorio musicale, i nostri concerti e le nostre performance. Grazie per essere passato a trovarci e a condividere con noi l'emozione della musica corale"
 
 
 # Team names, titles and social links
@@ -44,21 +44,18 @@ people:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+    url: https://www.facebook.com/quarta.eccedente
+  - title: instagram
+    url: https://www.instagram.com/coralequartaeccedente/
+  - title: youtube
+    url: https://www.youtube.com/@quartaeccedente
 
 # Postal address (add as many lines as necessary)
-address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+Indirizzi utili:
+  - Sede: Via Lungobisenzio, 19, 59021 Vaiano (PO)
+  - Recapito postale: Via Lungobisenzio, 19, 59021 Vaiano (PO)
+  - Sede prove: Scuola Media "Bartolini", Via Vitali, 59021 Vaiano (PO)
 
 # Build settings
 markdown: kramdown
