changed background image

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 url: https://quartaeccedente.github.io
 baseurl: 
+immagine_sfondo_header: img/portfolio/img_corale/mulinaccio.jpg
 
 # Site settings
 title: Corale Quarta Eccedente
