--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: https://quartaeccedente.github.io
-baseurl: 
+baseurl: https://quartaeccedente.github.io
 immagine_sfondo_header: img/portfolio/img_corale/mulinaccio.jpg
 
 # Site settings
