defined jpeg image

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 url: https://quartaeccedente.github.io
-baseurl: https://quartaeccedente.github.io
-immagine_sfondo_header: img/portfolio/img_corale/mulinaccio.jpg
+baseurl: 
 
 # Site settings
 title: Corale Quarta Eccedente
